# llm-scheduling

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmark/: locustfile.py  run_benchmark.py
benchmark/v2/locust/: locustfile_v2.py
benchmark/v2/mock/: mock_gpu_server_v2.py
benchmark/v2/observability/: instrumented_proxy.py
benchmark/v2/scripts/: dispatcher_config.yaml  experiment_a_gpu_baseline.py  experiment_b_gpu_concurrency.py  experiment_c_mock_calibration.py  experiment_d_mock_vs_real.py  experiment_e_stair_load.py  experiment_e_stair_load_quick.py  experiment_f_soak_test.py  experiment_g_overhead.py  generate_report.py  instrument_dispatcher.py  quick_gpu_test.py  run_v2_benchmark.py
config/: default.yaml
dashboard/: app.py
dashboard/pages/: balancer.py  instances.py  overview.py  scaling.py
deploy/: alerts.yaml
scripts/: _setup_now.py  bench_dual_model.py  bench_interview.py  bench_interview_v2.py  bench_lmstudio.py  bench_weighted.py  demo.py  dev.py  integration_scheduling_test.py  integration_test.py  mock_engine.py  setup_lmstudio.py
src/dispatcher/: __init__.py  batcher.py  circuit_breaker.py  health.py  main.py  metrics.py  middleware.py  proxy.py  queue.py  registry.py  scaler.py  tracing.py
src/dispatcher/api/: __init__.py  admin.py  health.py  inference.py
src/dispatcher/balancer/: __init__.py  base.py  least_conn.py  round_robin.py  weighted.py
src/dispatcher/engine/: __init__.py  base.py  ollama.py  tgi.py  vllm.py
src/shared/: __init__.py  config.py  logging.py  models.py
tests/: __init__.py  conftest.py  test_api.py  test_balancer.py  test_batcher.py  test_circuit_breaker.py  test_dashboard_api.py  test_e2e.py  test_engine.py  test_health.py  test_integration.py  test_integration_sprint2_3.py  test_metrics.py  test_models.py  test_proxy.py  test_queue.py  test_registry.py  test_scaler.py
