[project]
name = "llm-dispatcher"
version = "0.1.0"
description = "LLM 推理调度平台 — 部署在多个 LLM 推理引擎实例之上的智能调度层"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings",
    "pyyaml",
    "prometheus-client>=0.20",
    "structlog",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "streamlit>=1.35",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/shared", "src/dispatcher"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
