[project]
name = "llm-dispatcher"
version = "0.1.0"
description = "LLM    LLM "
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings",
    "pyyaml",
    "prometheus-client>=0.20",
    "structlog",
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-exporter-otlp-proto-http>=1.28",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "streamlit>=1.35",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
packages = ["src.dispatcher", "src.shared"]
explicit_package_bases = true

[tool.hatch.build.targets.wheel]
packages = ["src/shared", "src/dispatcher"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "locust>=2.44.1",
]
