[project]
name = "llm-dispatcher"
version = "0.1.0"
description = "LLM    LLM "
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings",
    "pyyaml",
    "prometheus-client>=0.20",
    "structlog",
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-exporter-otlp-proto-http>=1.28",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "streamlit>=1.35",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "e2e: end-to-end tests that require real subprocesses (skipped in CI by default)",
]
addopts = "-m \"not e2e\""

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
# 压测工具脚本: 工具性质, 放宽 strict 规则
"scripts/bench_interview.py" = ["E722"]
"scripts/bench_lmstudio.py" = ["E402", "E501"]
"scripts/bench_weighted.py" = ["E402", "E501"]
# 集成测试脚本
"scripts/integration_test.py" = ["E501"]
"scripts/integration_scheduling_test.py" = ["E722", "E501", "E701", "E702", "N806"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
packages = ["src.dispatcher", "src.shared"]
explicit_package_bases = true

[tool.hatch.build.targets.wheel]
packages = ["src/shared", "src/dispatcher"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "locust>=2.44.1",
]
